fixed z-index order

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -40,7 +40,7 @@
     font-size: 12px;
     margin-left: -2.0rem;
     margin-bottom: 2rem;
-    z-index: 10;
+    z-index: 8;
   }
   
 
